--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "help sell my hack",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
+  /*"dependencies": {
     "express": "3.x",
     "passport": "~0.2.0",
     "mongodb": "~1.4.3",
     "azure": "~0.9.7",
     "request": "~2.34.0"
-  }
+  }*/
 }
